--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
     <title>Когнитивное искажение Ivan</title>   
 </head>
 <body>
-    
+    <header class="header">    
+dfgdfgdfgdfgdgdfgdfgdfgdfgdf
+    </header>
+    <main class="main">
+
+    </main>
+    <section class="definition">
+
+    </section>
+    <section class="types">
+
+    </section>
+    <section class="effect">
+
+    </section>
+    <section class="optimization">
+
+    </section>
+    <section class="ideas">
+
+    </section>
+    <section class="mount">
+
+    </section>
+    <section class="mistake">
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
