--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">    
-dfgdfgdfgdfgdgdfgdfgdfgdfgdf
+        <h1><span>Когнитивные искажения</span><br>в программировании</h1>
     </header>
     <main class="main">
 
