--- a/index.html
+++ b/index.html
@@ -7,16 +7,47 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Neucha&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
-    <title>Когнитивное искажение Ivan</title>   
+    <title>Когнитивное искажение </title>   
 </head>
 <body>
-    <header class="header">    
-        <h1><span>Когнитивные искажения</span><br>в программировании</h1>
+    <header class=" header">
+         <div class="background">
+            <div class="wrapper ">
+                <div class="title">
+                <h1><span>Когнитивные<br>искажения</span><br>в программировании</h1>
+                </div>
+                <img src="/img/main.png" alt="human with computer" class="computer">
+            </div>
+            <div class="text">
+                <div class="first">
+                    <p>Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+                </div>
+                <div class="second">
+                    <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.<br><br>
+    Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+                    <a href="#" class="btn">ПОДРОБНЕЕ</a>
+            </div>
+            </div>
+        </div>   
     </header>
     <main class="main">
-
+        <div class="wrapper wrapper_2">
+            <div class="title title_center">
+                <h1>Что же такое,<br><span>когнитивное искажение?</span></h1>
+                <p>Что такое когнитивные искажения. Petrovna Channel</p>
+            </div>
+            <div class="vid">
+                <iframe class="video" width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+            </div>
+            
+        </div>
     </main>
-    <section class="definition">
+
+
+
+
+
+    <section class="definition ">
 
     </section>
     <section class="types">
